// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 1`] = `
Object {
  "reserves": Object {
    "asset": "0",
    "usdc": "0",
  },
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 2`] = `106408`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 3`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "100000000000000000000000000",
      "u": "100000001000000000000000000",
    },
    "before": Object {
      "a": "100000001000000000000000000",
      "u": "100000000000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "1000000000000000000",
    },
  },
  "direction": "ASSET->USDC",
  "execution": Object {
    "assetOut": "0",
    "sumOut": "1000000000000000000",
    "usdcOut": "1000000000000000000",
  },
  "gasUsed": "106408",
  "input": Object {
    "amountIn": "1000000000000000000",
    "minOut": "0",
  },
  "label": "A->U",
  "quotes": Object {
    "pool": Object {
      "amountOut": "1000000000000000000",
      "extra": Object {
        "0": "1000000000000000000",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "1000000000000000000",
      "extra": Object {
        "0": "1000000000000000000",
        "1": "0",
        "2": "200000000000000000000",
        "3": "200000000000000000000",
        "4": "0",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "1000000000000000000",
  },
  "reserves": Object {
    "after": Object {
      "a": "101000000000000000000",
      "u": "99000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "1000000000000000000",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Monotonicity (same block): larger amountIn → >= amountOut ASSET->USDC via quoter 1`] = `
Object {
  "direction": "ASSET->USDC",
  "q025": "250000000000000000",
  "q050": "500000000000000000",
  "q100": "1000000000000000000",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Monotonicity (same block): larger amountIn → >= amountOut USDC->ASSET via quoter 1`] = `
Object {
  "direction": "USDC->ASSET",
  "q025": "250000000000000000",
  "q050": "500000000000000000",
  "q100": "1000000000000000000",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Tiny-trade behavior Healthy reserves: tiny input yields non-zero output (A->U) 1`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "100000000000000000000000001",
      "u": "100000000000000000000000001",
    },
    "before": Object {
      "a": "100000000000000000000000002",
      "u": "100000000000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "1",
    },
  },
  "direction": "ASSET->USDC",
  "execution": Object {
    "assetOut": "0",
    "sumOut": "1",
    "usdcOut": "1",
  },
  "gasUsed": "106309",
  "input": Object {
    "amountIn": "1",
    "minOut": "0",
  },
  "label": "tiny — A->U",
  "quotes": Object {
    "pool": Object {
      "amountOut": "1",
      "extra": Object {
        "0": "1",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "1",
      "extra": Object {
        "0": "1",
        "1": "0",
        "2": "200000000000000000000",
        "3": "200000000000000000000",
        "4": "0",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "1",
  },
  "reserves": Object {
    "after": Object {
      "a": "100000000000000000001",
      "u": "99999999999999999999",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "1",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Tiny-trade behavior Healthy reserves: tiny input yields non-zero output (U->A) 1`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "100000000000000000000000001",
      "u": "100000000000000000000000001",
    },
    "before": Object {
      "a": "100000000000000000000000000",
      "u": "100000000000000000000000002",
    },
    "delta": Object {
      "a": "1",
      "u": "0",
    },
  },
  "direction": "USDC->ASSET",
  "execution": Object {
    "assetOut": "1",
    "sumOut": "1",
    "usdcOut": "0",
  },
  "gasUsed": "106404",
  "input": Object {
    "amountIn": "1",
    "minOut": "0",
  },
  "label": "tiny — U->A",
  "quotes": Object {
    "pool": Object {
      "amountOut": "1",
      "extra": Object {
        "0": "1",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "1",
      "extra": Object {
        "0": "1",
        "1": "0",
        "2": "200000000000000000000",
        "3": "200000000000000000000",
        "4": "0",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "1",
  },
  "reserves": Object {
    "after": Object {
      "a": "99999999999999999999",
      "u": "100000000000000000001",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "1",
      "u": "0",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 1`] = `
Object {
  "reserves": Object {
    "asset": "0",
    "usdc": "0",
  },
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 2`] = `106464`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 3`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "100000001000000000000000000",
      "u": "100000000000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000000000",
      "u": "100000001000000000000000000",
    },
    "delta": Object {
      "a": "1000000000000000000",
      "u": "0",
    },
  },
  "direction": "USDC->ASSET",
  "execution": Object {
    "assetOut": "1000000000000000000",
    "sumOut": "1000000000000000000",
    "usdcOut": "0",
  },
  "gasUsed": "106464",
  "input": Object {
    "amountIn": "1000000000000000000",
    "minOut": "0",
  },
  "label": "U->A",
  "quotes": Object {
    "pool": Object {
      "amountOut": "1000000000000000000",
      "extra": Object {
        "0": "1000000000000000000",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "1000000000000000000",
      "extra": Object {
        "0": "1000000000000000000",
        "1": "0",
        "2": "200000000000000000000",
        "3": "200000000000000000000",
        "4": "0",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "1000000000000000000",
  },
  "reserves": Object {
    "after": Object {
      "a": "99000000000000000000",
      "u": "101000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "1000000000000000000",
      "u": "0",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;
